Fix menu item text overflow

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -124,7 +124,8 @@
 .editbar ul li.menu-item--expanded:hover ul {
     display: block;
     position: absolute;
-    width: $submenu-width;
+    min-width: $submenu-width;
+    width: auto;
     box-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.4);
     z-index: 1;
     top: $item-height;
